Update a few fixes
Fixed items for FHEM and Domoticz